// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileList can add tiles to the list 1`] = `
[
  StraightTileModel {
    "direction": "left",
    "id": "id-22",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  StraightTileModel {
    "direction": "left",
    "id": "id-23",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList can be initialized with a source 1`] = `
[
  StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList can create tiles after a position in the middle 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-74",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-75",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-77",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-76",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles after an inexistent position 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-67",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles after the first position 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-68",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-70",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-69",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles after the last position 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-71",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-72",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-73",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles after with a particular type 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-78",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    CurvedTileModel {
      "direction": "left",
      "id": "id-79",
      "ratio": 2,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles at a given position if the index is valid 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles at a given position with a particular type 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-48",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    CurvedTileModel {
      "direction": "left",
      "id": "id-50",
      "ratio": 2,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-49",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles at a given position with the default specifications 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-45",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-47",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-46",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles at the first position with a particular type 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    CurvedTileModel {
      "direction": "left",
      "id": "id-43",
      "ratio": 2,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-42",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles at the first position with the default specifications 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-41",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-40",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles at the last position with a particular type 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    CurvedTileModel {
      "direction": "left",
      "id": "id-27",
      "ratio": 2,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles at the last position with the default specifications 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-26",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles before a position in the middle 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-59",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-62",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-60",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-61",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles before an inexistent position 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-52",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles before the first position 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-55",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-53",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-54",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles before the last position 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-56",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-58",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-57",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles before with a particular type 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    CurvedTileModel {
      "direction": "left",
      "id": "id-64",
      "ratio": 2,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-63",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles replacing tiles at inexistent position 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-37",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles replacing tiles with a tile having a particular type 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-33",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-34",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    CurvedTileModel {
      "direction": "left",
      "id": "id-36",
      "ratio": 2,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can create tiles replacing tiles with a tile having default specifications 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-29",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-32",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-31",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can export to an object 1`] = `
[
  {
    "direction": "right",
    "ratio": 1,
    "type": "curved-tile",
  },
]
`;

exports[`TileList can import from an object 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-83",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can import from an object 2`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    CurvedTileModel {
      "direction": "left",
      "id": "id-84",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    StraightTileModel {
      "direction": "right",
      "id": "id-85",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    CurvedTileModel {
      "direction": "right",
      "id": "id-86",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can insert tiles at a particular index 1`] = `
[
  StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  StraightTileModel {
    "direction": "left",
    "id": "id-14",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  StraightTileModel {
    "direction": "left",
    "id": "id-15",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList can insert tiles at the beginning 1`] = `
[
  StraightTileModel {
    "direction": "left",
    "id": "id-16",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  StraightTileModel {
    "direction": "left",
    "id": "id-17",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList can insert tiles at the end 1`] = `
[
  StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  StraightTileModel {
    "direction": "left",
    "id": "id-18",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  StraightTileModel {
    "direction": "left",
    "id": "id-19",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList can map its values 1`] = `
[
  "straight-tile-1",
  "curved-tile-1",
  "curved-tile-enlarged-1",
]
`;

exports[`TileList can produce an iterator 1`] = `
[
  StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList can remove tiles by their identifier at inexistent position 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-0",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    CurvedTileModel {
      "direction": "right",
      "id": "id-1",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    CurvedTileEnlargedModel {
      "direction": "right",
      "id": "id-2",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can remove tiles by their identifier from the end 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-0",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    CurvedTileModel {
      "direction": "right",
      "id": "id-1",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can remove tiles by their identifier from the middle 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-0",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    CurvedTileEnlargedModel {
      "direction": "right",
      "id": "id-2",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can remove tiles by their identifier from the start 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    CurvedTileModel {
      "direction": "right",
      "id": "id-1",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    CurvedTileEnlargedModel {
      "direction": "right",
      "id": "id-2",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList can remove tiles from a particular index 1`] = `
[
  StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList can set a tile at a particular index 1`] = `
[
  StraightTileModel {
    "direction": "left",
    "id": "id-7",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileModel {
    "direction": "left",
    "id": "id-8",
    "ratio": 2,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "left",
    "id": "id-9",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList can set a tile in place of an existing tile 1`] = `
[
  StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  StraightTileModel {
    "direction": "left",
    "id": "id-10",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList can set the specifications of the tiles 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-6",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 2,
        "barrierWidth": 1,
        "laneWidth": 10,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {
    "barrierChunks": 2,
    "barrierWidth": 1,
    "laneWidth": 10,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileList emits an event when adding tiles 1`] = `
[
  3,
  StraightTileModel {
    "direction": "left",
    "id": "id-24",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  StraightTileModel {
    "direction": "left",
    "id": "id-25",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList emits an event when inserting values 1`] = `
[
  1,
  StraightTileModel {
    "direction": "left",
    "id": "id-20",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  StraightTileModel {
    "direction": "left",
    "id": "id-21",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList emits an event when removing tiles from a particular index 1`] = `
[
  1,
  CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList emits an event when setting a tile 1`] = `
[
  0,
  StraightTileModel {
    "direction": "left",
    "id": "id-11",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList emits an event when setting a tile 2`] = `
[
  1,
  CurvedTileModel {
    "direction": "left",
    "id": "id-12",
    "ratio": 3,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList emits an event when setting a tile 3`] = `
[
  2,
  CurvedTileEnlargedModel {
    "direction": "left",
    "id": "id-13",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileList implements the iteration protocol 1`] = `
[
  StraightTileModel {
    "direction": "right",
    "id": "id-0",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "id-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "id-2",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;
